<resources>
    <string name="app_name">My Application 2</string>
    <string name="credit">Credit</string>
    <string name="winning">Winning</string>
    <string name="_0">0</string>
    <string name="_01">0</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="spin">Spin</string>
    <string name="add_credit">Add Credit</string>
    <string name="collect">COLLECT</string>
    <string name="todo2">TODO</string>
    <string name="winnings">winnings</string>
    <string name="zero">0</string>
    <string name="_00">0</string>
</resources>