<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbCredit"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:text="CREDIT"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/lbWinnings"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/lbWinnings"
        android:layout_width="98dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="84dp"
        android:text="SCORE"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtCredit"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/txtWinnings"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbCredit"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/txtWinnings"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="88dp"
        android:background="@color/black"
        android:text="@string/_01"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbWinnings"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="95dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCredit"
        app:srcCompat="@drawable/apple"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="106dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txtCredit"
        app:srcCompat="@drawable/grapes"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/btnSpin"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="69dp"
        android:background="@color/black"
        android:text="@string/spin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCredit"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="@string/add_credit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSpin"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCollect"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="33dp"
        android:background="@color/black"
        android:text="@string/collect"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCredit"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="95dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCredit"
        app:srcCompat="@drawable/banana"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>